# llmdevsilo

./: .gitignore  Cargo.toml  LICENSE  README.md
apps/silo-tui/: Cargo.toml
apps/silo-tui/src/: app.rs  commands.rs  main.rs  net.rs  ui.rs
apps/silo_app/: .metadata  README.md  pubspec.yaml
apps/silo_app/android/app/: build.gradle.kts
apps/silo_app/android/app/src/main/: AndroidManifest.xml
apps/silo_app/android/app/src/main/kotlin/tools/common/silo_app/: MainActivity.kt
apps/silo_app/android/app/src/main/res/values/: colors.xml
apps/silo_app/ios/Runner/: Info.plist
apps/silo_app/ios/Runner.xcodeproj/: project.pbxproj
apps/silo_app/lib/: main.dart
apps/silo_app/lib/src/connection/: default_channel.dart  default_channel_io.dart  default_channel_web.dart  endpoint.dart  event_store.dart  harness_connection.dart  harness_registry.dart  lan_addresses.dart  lan_addresses_io.dart  lan_addresses_stub.dart  local_harness.dart  local_harness_io.dart  local_harness_options.dart  local_harness_stub.dart  message_channel.dart  preferences.dart  preferences_io.dart  preferences_web.dart  secret_store.dart  silo_locator.dart
apps/silo_app/lib/src/protocol/: event.dart  protocol.dart  sandbox.dart  types.dart
apps/silo_app/lib/src/ui/: access_sheet.dart  chat_screen.dart  chat_view.dart  connection_details_sheet.dart  event_tiles.dart  home_screen.dart  pairing_info.dart  pairing_sheet.dart  question_card.dart  theme.dart
apps/silo_app/macos/Runner/: README.md
apps/silo_app/macos/Runner.xcodeproj/: project.pbxproj
apps/silo_app/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
apps/silo_app/macos/Runner/Configs/: AppInfo.xcconfig
apps/silo_app/test/: auth_test.dart  chat_screen_test.dart  display_name_test.dart  event_store_test.dart  harness_registry_test.dart  local_harness_options_test.dart  local_harness_runs_test.dart  local_harness_spawn_test.dart  pairing_info_test.dart  pairing_sheet_test.dart  protocol_test.dart  question_card_test.dart  screenshots_test.dart  silo_locator_test.dart  start_local_dialog_test.dart  transcript_test.dart
apps/silo_app/tool/: generate_icon.swift
apps/silo_app/web/: index.html  manifest.json
crates/silo/: Cargo.toml
crates/silo-core/: Cargo.toml
crates/silo-core/src/: clock.rs  config.rs  conversation.rs  cost.rs  error.rs  event.rs  helper.rs  journal.rs  lib.rs  paths.rs  protocol.rs  replay.rs  risk.rs  sandbox.rs  secrets.rs  tool.rs  traits.rs
crates/silo-frontend/: Cargo.toml
crates/silo-frontend/src/: client.rs  headless.rs  lib.rs  mock.rs  tools.rs  util.rs
crates/silo-frontend/src/interactive/: auth.rs  connection.rs  http.rs  mod.rs  tls.rs
crates/silo-frontend/tests/: headless.rs  interactive.rs  mock.rs
crates/silo-harness/: Cargo.toml
crates/silo-harness/src/: agent.rs  lib.rs  prompts.rs  shutdown.rs  uploads.rs  validate.rs
crates/silo-harness/tests/: await_agent_edge_cases.rs  headless_quota_session.rs  interrupt_session.rs  mock_session.rs  parallel_subagents.rs  question_session.rs  quota_session.rs  replay_roundtrip.rs  risk_scan.rs  script_failures.rs  send_file_session.rs  shared_shell.rs  subagent_session.rs  upload_session.rs
crates/silo-harness/tests/common/: mod.rs
crates/silo-helper/: Cargo.toml
crates/silo-helper/src/: fetch.rs  lib.rs  main.rs  ops.rs  relay.rs
crates/silo-helper/tests/: fetch.rs  serve_stream.rs
crates/silo-llm/: Cargo.toml
crates/silo-llm/src/: anthropic.rs  common.rs  lib.rs  local.rs  mock.rs  openai_responses.rs  openai_ws.rs
crates/silo-llm/tests/: anthropic_test.rs  local_test.rs  mock_test.rs  openai_responses_test.rs  openai_ws_test.rs
crates/silo-proxy/: Cargo.toml
crates/silo-proxy/src/: allowlist.rs  ca.rs  credentials.rs  dns.rs  ipguard.rs  lib.rs  mock.rs  proxy.rs  upstream.rs
crates/silo-proxy/tests/: proxy_integration.rs
crates/silo-proxy/tests/common/: mod.rs
crates/silo-sandbox/: Cargo.toml
crates/silo-sandbox/src/: lib.rs  mock.rs  scratch.rs  search.rs  session.rs  toolimpl.rs  tools.rs
crates/silo-sandbox/src/linux/: forward.rs  gvisor.rs  microvm.rs  mod.rs  spec.rs
crates/silo-sandbox/src/macos/: linux_vm.rs  mod.rs  profile.rs  sandbox_exec.rs
crates/silo-sandbox/tests/: helper_roundtrip.rs  mock_sandbox.rs  sandbox_exec_integration.rs
crates/silo-tui/src/: app.rs  commands.rs  main.rs  net.rs  ui.rs
crates/silo-tui/tests/: cli.rs
crates/silo-workspace/: Cargo.toml
crates/silo-workspace/src/: autoexec.rs  diff.rs  lib.rs  process.rs  registry.rs  snapshot.rs  strategy.rs
crates/silo-workspace/tests/: ext4fuse.rs  sparsebundle.rs  workspace.rs
crates/silo/src/: cli.rs  cmd_harnesses.rs  cmd_manpages.rs  cmd_replay.rs  cmd_run.rs  cmd_shell.rs  cmd_workspace.rs  main.rs
crates/silo/tests/: run_script_failure.rs  run_subagents.rs  shell_mirror.rs
docs/: ARCHITECTURE.md  CLI.md  COSTS.md  DESIGN.md  INSTALL.md  PROTOCOLS.md  REPLAY.md  SANDBOX-BACKENDS.md  SECURITY.md  SUBAGENTS.md  TOOLS.md  sandbox-backends.md
scripts/: install.sh
