[workspace]
resolver = "2"
members = [
    "crates/silo-core",
    "crates/silo-llm",
    "crates/silo-proxy",
    "crates/silo-sandbox",
    "crates/silo-workspace",
    "crates/silo-frontend",
    "crates/silo-harness",
    "crates/silo-helper",
    "crates/silo-tui",
    "crates/silo",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/ianh/llmdevsilo"

[workspace.dependencies]
silo-core = { path = "crates/silo-core" }
silo-llm = { path = "crates/silo-llm" }
silo-proxy = { path = "crates/silo-proxy" }
silo-sandbox = { path = "crates/silo-sandbox" }
silo-workspace = { path = "crates/silo-workspace" }
silo-frontend = { path = "crates/silo-frontend" }
silo-harness = { path = "crates/silo-harness" }

anyhow = "1"
async-trait = "0.1"
base64 = "0.22"
bytes = "1"
clap = { version = "4", features = ["derive"] }
crossterm = "0.28"
dirs = "6"
ed25519-dalek = { version = "2", features = ["rand_core", "pkcs8", "pem"] }
futures = "0.3"
hex = "0.4"
hickory-proto = "0.24"
http = "1"
http-body-util = "0.1"
httparse = "1"
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
ignore = "0.4"
ipnet = "2"
libc = "0.2"
nix = { version = "0.29", features = ["mount", "sched", "user", "signal", "process"] }
parking_lot = "0.12"
rand = "0.8"
ratatui = "0.29"
rcgen = { version = "0.13", features = ["x509-parser"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "stream"] }
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "logging", "tls12"] }
rustls-pemfile = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
similar = "2"
tempfile = "3"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tokio-rustls = { version = "0.26", default-features = false, features = ["ring", "logging", "tls12"] }
tokio-tungstenite = { version = "0.26", features = ["rustls-tls-webpki-roots"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4", "serde"] }
walkdir = "2"
webpki-roots = "0.26"
x509-parser = "0.16"

[profile.release]
lto = "thin"
