[package]
name = "silo-tui"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "silo-tui"
path = "src/main.rs"

[dependencies]
silo-core = { workspace = true }
silo-frontend = { workspace = true }

anyhow = { workspace = true }
clap = { workspace = true }
crossterm = { workspace = true, features = ["event-stream"] }
ed25519-dalek = { workspace = true }
futures = { workspace = true }
ratatui = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tokio-tungstenite = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
