[package]
name = "silo-harness"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
silo-core = { workspace = true }
silo-llm = { workspace = true }
silo-proxy = { workspace = true }
silo-sandbox = { workspace = true }
silo-workspace = { workspace = true }
silo-frontend = { workspace = true }

dirs = { workspace = true }
futures = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
