[package]
name = "silo-llm"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
silo-core = { workspace = true }

async-trait = { workspace = true }
base64 = { workspace = true }
futures = { workspace = true }
rand = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-tungstenite = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
httparse = { workspace = true }
tempfile = { workspace = true }
