[package]
name = "silo-proxy"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
silo-core = { workspace = true }

async-trait = { workspace = true }
bytes = { workspace = true }
futures = { workspace = true }
hickory-proto = { workspace = true }
http = { workspace = true }
http-body-util = { workspace = true }
httparse = { workspace = true }
hyper = { workspace = true }
hyper-util = { workspace = true }
ipnet = { workspace = true }
rcgen = { workspace = true }
rustls = { workspace = true }
rustls-pemfile = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-rustls = { workspace = true }
tracing = { workspace = true }
webpki-roots = { workspace = true }
x509-parser = { workspace = true }

[dev-dependencies]
reqwest = { workspace = true }
tempfile = { workspace = true }
