[package]
name = "silo-sandbox"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
silo-core = { workspace = true }

async-trait = { workspace = true }
base64 = { workspace = true }
futures = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tempfile = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
walkdir = { workspace = true }

[target.'cfg(target_os = "linux")'.dependencies]
nix = { workspace = true }
libc = { workspace = true }

[dev-dependencies]
silo-helper = { path = "../silo-helper" }
