[package]
name = "silo-workspace"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
silo-core = { workspace = true }

hex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
similar = { workspace = true }
tracing = { workspace = true }
walkdir = { workspace = true }

[target.'cfg(unix)'.dependencies]
nix = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
